examples/minimal/violates-constraint/CV-EFNC2-bad.output
Error: CV-EFNC2
Description: incompatible types in function call arguments.
Type: Constraint violation.
See also: C11 sec. 6.5.16.1:1
  at foo(/Users/manasvi/Documents/c-semantics/examples/minimal/violates-constraint/CV-EFNC2-bad.c:4)
  at main(/Users/manasvi/Documents/c-semantics/examples/minimal/violates-constraint/CV-EFNC2-bad.c:4)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
