examples/minimal/violates-constraint/CV-EFNC2-bad.c
int foo();

int main(void){
	foo(5);
}

int foo(){
	return 0;
}
